Add '26.1-snapshot-6' sources